# tunnel-manager

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json  qodana.yaml  reference.dashboard.html  reference.panel.html
.cargo/: config.toml
.githooks/: pre-commit
.github/releases/: v0.1.10.md
.github/workflows/: ci.yml  codeql.yml  qodana.yml  release.yml
docs/: auto-update.md
scripts/: check-version-sync.mjs  generate-updater-manifest.mjs  setup-githooks.mjs  verify-release-ci.mjs
src/: App.tsx  TauriCommands.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/windows/: installer.nsi
src-tauri/src/: lib.rs  menu_bar.rs  onboarding.rs  system_commands.rs  tunnel.rs  updater.rs  windowing.rs
src-tauri/src/tunnel/: process.rs  ssh.rs
src/components/: AppDialogs.tsx  AppShell.tsx  CommandPreview.tsx  EmptyState.tsx  FilterMenuItem.tsx  IconDisplay.tsx  LogPanel.tsx  OnboardingWindow.tsx  PasswordPrompt.tsx  ProfileCard.tsx  ProfileForm.tsx  ProfileJsonImportDialog.tsx  ProfileList.tsx  SettingsControls.tsx  SettingsPage.tsx  profile-form-utils.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  Toast.tsx  (+1 more)
src/hooks/: useAppUpdater.ts  useSSHCommand.ts  useSshInfo.ts  useTheme.ts  useTunnelPolling.ts  useWindowNavigation.ts
src/lib/: app-support.ts  color-hash.ts  keychain.ts  ssh-command.ts
src/store/: index.ts
src/styles/: variants.css
src/types/: index.ts
